--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-    "name": "base",
-    "description": "Base",
-    "author": "Ivan Pantuyev <ivanvpan@gmail.com>",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "connect": "*",
-        "connect-flash": "*",
-        "async": "*",
-        "express": "*",
-        "stylus": "*",
-        "mongoose": "*",
-        "nconf": "*",
-        "moment": "*",
-        "underscore": "*",
-        "passport": "*",
-        "bcrypt": "*"
-    },
-    "engine": "node >= 0.6.6"
+  "name": "base",
+  "description": "Base",
+  "author": "Ivan Pantuyev <ivanvpan@gmail.com>",
+  "version": "0.1.0",
+  "private": true,
+  "engine": "node >= 0.6.6",
+  "devDependencies": {
+    "async": "^0.9.0",
+    "bcrypt": "^0.8.0",
+    "body-parser": "^1.9.2",
+    "compression": "^1.2.0",
+    "connect": "^3.3.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.3",
+    "cookie-session": "^1.0.2",
+    "errorhandler": "^1.2.2",
+    "express": "^4.10.1",
+    "moment": "^2.8.3",
+    "mongoose": "^3.8.18",
+    "nconf": "^0.6.9",
+    "passport": "^0.2.1",
+    "response-time": "^2.2.0",
+    "serve-static": "^1.7.1",
+    "stylus": "^0.49.2",
+    "underscore": "^1.7.0"
+  }
 }
